--- a/Nucleo_L053R8_MCP2515/MDK-ARM/Nucleo_L053R8_MCP2515/Nucleo_L053R8_MCP2515.build_log.htm
+++ b/Nucleo_L053R8_MCP2515/MDK-ARM/Nucleo_L053R8_MCP2515/Nucleo_L053R8_MCP2515.build_log.htm
@@ -21,40 +21,40 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
 Dialog DLL:      TARMCM1.DLL V1.14.1.0
  
 <h2>Project:</h2>
-C:\Users\Jonathan\Documents\Projects\Testers\Nucleo_L053R8_MCP2515\Nucleo_L053R8_MCP2515\MDK-ARM\Nucleo_L053R8_MCP2515.uvprojx
+C:\Users\Jonathan\Documents\GitHub\CAN_MCP2515_STM32L053R8_Driver\Nucleo_L053R8_MCP2515\MDK-ARM\Nucleo_L053R8_MCP2515.uvprojx
 Project File Date:  01/18/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Nucleo_L053R8_MCP2515'
 assembling startup_stm32l053xx.s...
-compiling stm32l0xx_hal_tim.c...
 compiling CANSPI.c...
 compiling stm32l0xx_hal_msp.c...
 compiling stm32l0xx_it.c...
-compiling MCP2515.c...
+compiling stm32l0xx_hal_tim.c...
 compiling main.c...
 ../Src/main.c(75): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
   	HAL_UART_Transmit(&huart2, str, strlen(str), HAL_MAX_DELAY);
 ../Src/main.c: 1 warning, 0 errors
+compiling MCP2515.c...
 compiling stm32l0xx_hal_spi.c...
-compiling stm32l0xx_hal_uart_ex.c...
 compiling stm32l0xx_hal_tim_ex.c...
-compiling stm32l0xx_hal.c...
+compiling stm32l0xx_hal_uart_ex.c...
 compiling stm32l0xx_hal_i2c_ex.c...
+compiling stm32l0xx_hal.c...
 compiling stm32l0xx_hal_rcc.c...
 compiling stm32l0xx_hal_uart.c...
 compiling stm32l0xx_hal_i2c.c...
-compiling stm32l0xx_hal_flash_ramfunc.c...
 compiling stm32l0xx_hal_flash.c...
-compiling stm32l0xx_hal_flash_ex.c...
-compiling stm32l0xx_hal_dma.c...
-compiling stm32l0xx_hal_pwr.c...
-compiling stm32l0xx_hal_gpio.c...
+compiling stm32l0xx_hal_flash_ramfunc.c...
 compiling stm32l0xx_hal_rcc_ex.c...
-compiling stm32l0xx_hal_cortex.c...
-compiling stm32l0xx_hal_pwr_ex.c...
+compiling stm32l0xx_hal_gpio.c...
+compiling stm32l0xx_hal_flash_ex.c...
+compiling stm32l0xx_hal_pwr.c...
+compiling stm32l0xx_hal_dma.c...
 compiling system_stm32l0xx.c...
+compiling stm32l0xx_hal_pwr_ex.c...
+compiling stm32l0xx_hal_cortex.c...
 linking...
 Program Size: Code=8160 RO-data=260 RW-data=8 ZI-data=1264  
 FromELF: creating hex file...
@@ -81,7 +81,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
